tests/machine/x/pl/dataset_sort_take_limit.pl
:- style_check(-singleton).
main :-
    % unsupported: unsupported primary
    % unsupported: unsupported primary
    write("--- Top products (excluding most expensive) ---"),
    nl,
    % unsupported: for without range not supported
    true.
:- initialization(main, main).
